--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "bcryptjs": "^2.4.3",
     "ejs": "^3.1.10",
     "express": "^4.21.0",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "pg": "^8.13.0"
